# HellSolver

./: .codacy.yml  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  codecov.yml  setup.py  sonar-project.properties
.github/workflows/: macos.yml  ubuntu.yml  ubuntu_codecov.yml  windows.yml
Extensions/HellGUI/: config.py  main.py  render.py  resources.py
Extensions/HellPython/: CMakeLists.txt  main.cpp
Includes/: Test.hpp
Includes/HellSolver/: HellSolver.hpp
Includes/HellSolver/Agents/: IAgent.hpp  RandomAgent.hpp
Includes/HellSolver/Enums/: GameEnums.hpp
Includes/HellSolver/Games/: Game.hpp  Map.hpp  Object.hpp
Includes/HellSolver/Models/: Map.hpp  Object.hpp  Player.hpp  Position.hpp
Includes/HellSolver/Player/: Player.hpp
Resources/Maps/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  _Componenets.txt  _Components.txt
Resources/Maps/Level/: 1.txt  (+8 more)
Scripts/: Dockerfile.bionic-codecov  azure_pipelines_build_linux.yml  azure_pipelines_build_macos.yml  azure_pipelines_build_windows_vs2017.yml  azure_pipelines_build_windows_vs2019.yml  header_gen.py  travis_build_docker.sh
Sources/: CMakeLists.txt
Sources/HellSolver/: CMakeLists.txt  Test.cpp
Sources/HellSolver/Agents/: RandomAgent.cpp
Sources/HellSolver/Games/: Game.cpp  Map.cpp  Object.cpp
Sources/HellSolver/Models/: Map.cpp  Object.cpp  Player.cpp
Sources/HellSolver/Player/: Player.cpp
Tests/PythonTests/: test_game.py  test_logic.py  test_map.py
Tests/UnitTests/: CMakeLists.txt  SimpleTests.cpp  UnitTests.cpp  main.cpp
(+36 files in other folders)
